tests/expected_invalid_generic_record_construct_missing_args.diag.out
<input>:9:5: error: generic record 'Box' requires explicit type arguments
        support::Box { value: 7 }.value
        ^^^^^^^^^^^^^^^^^^^^^^^^^
